--- a/www/src/input.css
+++ b/www/src/input.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  top: 68px;
+  left: -130%;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
